--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Mount App -->
     <script>
       const mountedApp = app.mount('#app')
+      // mountedApp.product = 'Shoes'
     </script>
   </body>
 </html>
